@@ -1,6 +1,7 @@
 * Sun Apr 18 2010 Kentaro Kitagawa <kitag@issp.u-tokyo.ac.jp>
 - (3.1.3-1)
 - allocator.cpp: Lock-free new()/delete() by memory pools.
+- atomic_shared_ptr.h: Faster local_shared_ptr.
 
 * Mon Apr 12 2010 Kentaro Kitagawa <kitag@issp.u-tokyo.ac.jp>
 - (3.1.2-1)
